# zfx-sortition

./: Cargo.toml  README.md
.github/workflows/: main.yml
benches/: select_benchmark.rs
src/: binomial.rs  build.rs  failed01.json  failed02.json  lib.rs  sortition.rs
