[package]
name = "zfx-sortition"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dev-dependencies]
criterion = "0.3.4"

[dependencies]
rand = "0.8.4"
num = "0.4.0"
rug = "1.12.0"
statrs = "0.15.0"
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"

[features]


[[bench]]
name = "select_benchmark"
harness = false